<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csc309.ENC.pingme.LoginActivity$PlaceholderFragment" >

    <!-- Big logo display -->
    <ImageView android:id="@+id/logo_splash"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
		android:maxHeight="360dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logo_main" />

    <!-- Username bar -->
    <EditText android:id="@+id/login_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingTop="32dp"
        android:inputType="text"
        android:hint="@string/username_hint" />
    
    <!-- Passward bar -->
    <EditText android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_username"
        android:paddingTop="8dp"
        android:inputType="textPassword"
    	android:hint="@string/password_hint" />
    
    <!-- Login button -->
    <Button android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password" 
        android:paddingTop="8dp"
        android:text="@string/button_login" />
    
    <!-- Sign up button -->
    <Button android:id="@+id/button_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:text="@string/button_signup" />
    
    <!-- Forgotten password text clickable -->
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"	
        android:paddingBottom="4dp"
        android:singleLine="true"
        android:clickable="true"
        android:onClick="passwordForgot"
        android:text="@string/forgot_password" />
    
</RelativeLayout>
