<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ForgottenPasswordActivity" >

    <TextView android:id="@+id/forgot_password_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="22sp"
        android:text="@string/forgot_password" />
    
    <TextView android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_query"
        android:paddingTop="8dp"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="18sp"
        android:text="@string/reset_password_text" />
    
    <EditText android:id="@+id/forgot_password_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@id/forgot_password_email"
		android:layout_alignParentRight="true"
		android:onClick="sendEmail"
		android:text="@string/button_submit" />
    
    
</RelativeLayout>
